# jsonschema2atd

./: .ocamlformat  HISTORY.md  LICENSE  Makefile  README.md  dune-project  jsonschema2atd.opam
.github/workflows/: build-test.yml  lint.yml
lib/: converter.ml  dune  generator.ml  json_schema.atd  json_schema_adapters.ml  openapi.atd  utils.ml
runtime/: adapter.ml  dune
tests/: all_of.ml  base.ml  base.mli  defaults.ml  dune  enums.ml  grok.t  nullable.ml  objects.ml  one_of.ml  primitives.ml  refs.ml  smoke.t  types_renaming.ml
tests/mocks/: dashboard_types_gen.json  jsonchema_definitions.json  jsonchema_defs.json  jsonschema_enums.json  jsonschema_refs.json  simple_jsonschema.json  simple_openapi.json
